fixed issue with mobile menu where other options would stay open yet be invisible

--- a/themes/shanti/sass/layout/_navigation.scss
+++ b/themes/shanti/sass/layout/_navigation.scss
@@ -192,6 +192,7 @@ a {
 
 		a {
 			text-transform: capitalize;
+			width: 100%;
 		}
 	}
 }
